--- a/src/assets/overrides/fsrExport.styl
+++ b/src/assets/overrides/fsrExport.styl
@@ -1,9 +1,15 @@
-.fsrExport {
-  $documentSize = 9pt;
-  $headerSize = 11pt;
-  $tableCell = (8in / 11);
+$documentSize = 9pt;
+$headerSize = 11pt;
+$tableCell = (8in / 11);
 
-  // display: inline-block;
+.export-wrapper {
+  width: 8.5in;
+  background-color: white;
+  padding: 0.7in 0.5in;
+}
+
+
+.fsrExport {
   display: inline;
   max-width: 100%;
   font-family: "Arial", sans-serif;
@@ -13,8 +19,7 @@
     font-size: $documentSize;
     line-height: 1.25;
 
-    width: 8.5in;
-    // padding: 0.7in 0.5in;
+    width: 100%;
     position: relative;
     overflow: visible;
     
